src/objects/ffbc__ContractLineItem__c.object
<CustomObject>
    <customHelpPage>ffbc__contractlineitemhelp</customHelpPage>
    <fields>
        <fullName>Creating_Contract_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creating Contract Line Item</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__ActiveContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the active contract line item to which this change request line item relates.</description>
        <inlineHelpText>Lookup to the active contract line item to which this change request line item relates.</inlineHelpText>
        <label>Active Contract Line Item</label>
        <referenceTo>ffbc__ContractLineItem__c</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>RelatedContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__AnnualRecurringRevenue__c</fullName>
        <description>Monthly Recurring Revenue multiplied by 12.</description>
        <formula>ffbc__MonthlyRecurringRevenue__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Recurring Revenue multiplied by 12.</inlineHelpText>
        <label>Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__BilledTo__c</fullName>
        <description>Date up to which the contract line item has been billed.</description>
        <inlineHelpText>Date up to which the contract line item has been billed.</inlineHelpText>
        <label>Billed To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the soft date that determines when billing occurs.</description>
        <label>Billing Term</label>
        <referenceTo>ffbc__SoftDate__c</referenceTo>
        <relationshipLabel>Related Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingType__c</fullName>
        <description>The type of billing for this contract line item.</description>
        <inlineHelpText>The type of billing for this contract line item.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring Fixed</fullName>
                </value>
                <value>
                    <fullName>Recurring Variable</fullName>
                </value>
                <value>
                    <fullName>One-off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbc__ContractEndDate__c</fullName>
        <description>Formula field containing the end date of the contract to which the contract line item belongs.</description>
        <formula>ffbc__Contract__r.ffbc__EndDate__c</formula>
        <inlineHelpText>End date of the contract to which this contract line item belongs.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractFirstBillDate__c</fullName>
        <description>Formula field containing the first bill date of the contract to which the contract line item belongs.</description>
        <formula>ffbc__Contract__r.ffbc__FirstBillDate__c</formula>
        <inlineHelpText>First bill date of the contract to which this contract line item belongs.</inlineHelpText>
        <label>Contract First Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractStartDate__c</fullName>
        <description>Formula field containing the start date of the contract to which the contract line item belongs.</description>
        <formula>ffbc__Contract__r.ffbc__StartDate__c</formula>
        <inlineHelpText>Start date of the contract to which this contract line item belongs.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractStatus__c</fullName>
        <description>Formula field containing the status of the contract to which the contract line item belongs.</description>
        <formula>TEXT(ffbc__Contract__r.ffbc__Status__c)</formula>
        <inlineHelpText>Status of the contract to which this contract line item belongs.</inlineHelpText>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__ContractType__c</fullName>
        <description>Formula field containing the type of contract to which this contract line item belongs.</description>
        <formula>TEXT(ffbc__Contract__r.ffbc__Type__c)</formula>
        <inlineHelpText>Type of contract to which this contract line item belongs.</inlineHelpText>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__Contract__c</fullName>
        <description>Contract to which this contract line belongs.</description>
        <inlineHelpText>Contract to which this contract line belongs.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>ffbc__Contract__c</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffbc__Description__c</fullName>
        <description>Description of the contract line item.</description>
        <inlineHelpText>Description of the contract line item.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffbc__Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the discount applied to this contract line item.</description>
        <inlineHelpText>Lookup to the discount applied to this contract line item.</inlineHelpText>
        <label>Discount</label>
        <referenceTo>ffbc__Discount__c</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__EndDate__c</fullName>
        <description>Date on which this contract line item ends.</description>
        <inlineHelpText>Date on which this contract line item ends.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__FirstBillDate__c</fullName>
        <description>First date on which the contract line item is to be billed.</description>
        <inlineHelpText>First date on which the contract line item is to be billed.</inlineHelpText>
        <label>First Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__InArrears__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the contract line item is to be billed in arrears.</description>
        <inlineHelpText>Indicates whether the contract line item is to be billed in arrears.</inlineHelpText>
        <label>Bill in Arrears</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbc__MonthlyRecurringRevenue__c</fullName>
        <description>Monthly recurring revenue for the contract line item. This is calculated by multiplying the Sales Price by the Monthly Recurring Revenue Multiplier of the Soft Date associated with the contract line item.</description>
        <formula>ffbc__MrrMultiplier__c * ffbc__SalesPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly recurring revenue for the contract line item. This is calculated by multiplying the Sales Price by the Monthly Recurring Revenue Multiplier of the Billing Term associated with the contract line item.</inlineHelpText>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__MrrMultiplier__c</fullName>
        <description>Multiplier used to calculate monthly recurring revenue. Must contain a positive number.</description>
        <inlineHelpText>Multiplier used to calculate monthly recurring revenue. Must contain a positive number.</inlineHelpText>
        <label>Monthly Recurring Revenue Multiplier</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Plan</description>
        <label>Plan Name</label>
        <referenceTo>ffbc__Plan__c</referenceTo>
        <relationshipLabel>Related Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__PreviousContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the previous contract line item to which this contract line item relates.</description>
        <inlineHelpText>Lookup to the previous contract line item to which this contract line item relates.</inlineHelpText>
        <label>Previous Contract Line Item</label>
        <referenceTo>ffbc__ContractLineItem__c</referenceTo>
        <relationshipLabel>Next Contract Line Item</relationshipLabel>
        <relationshipName>NextContractLineItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__PricingStructure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the pricing structure that determines the Unit Price for different quantities on this contract line item.</description>
        <inlineHelpText>Lookup to the pricing structure that determines the Unit Price for different quantities on this contract line item.</inlineHelpText>
        <label>Pricing Structure</label>
        <referenceTo>ffbc__PricingStructure__c</referenceTo>
        <relationshipLabel>Related Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__PricingType__c</fullName>
        <description>Type of pricing to be used for this contract line item. When set to Fixed, the unit price is always the same. Otherwise, the unit price is determined by quantity.</description>
        <formula>IF(ISBLANK(ffbc__PricingStructure__c),
                $Label.ffbc__pricingtypefixed,
                TEXT(ffbc__PricingStructure__r.ffbc__PricingType__c)
            )</formula>
        <inlineHelpText>Type of pricing to be used for this contract line item. When set to Fixed, the unit price is always the same. Otherwise, the unit price is determined by quantity.</inlineHelpText>
        <label>Pricing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__ProductService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Salesforce product or service.</description>
        <inlineHelpText>Lookup to the Salesforce product or service.</inlineHelpText>
        <label>Product or Service</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity of the product or service being purchased. You must enter a value if a fixed Billing Type is selected.</description>
        <inlineHelpText>Quantity of the product or service being purchased. You must enter a value if a fixed Billing Type is selected.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__RevenueCategory__c</fullName>
        <description>The type of revenue from which the contract line item originates.</description>
        <inlineHelpText>The type of revenue from which the contract line item originates.</inlineHelpText>
        <label>Revenue Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net New Booking</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Churn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbc__SalesPriceOverride__c</fullName>
        <description>Contains a value that is used to calculate the Sales Price when a contract line item contains a pricing structure.</description>
        <inlineHelpText>Contains a value that is used to calculate the Sales Price when a contract line item contains a pricing structure.</inlineHelpText>
        <label>Sales Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__SalesPrice__c</fullName>
        <description>Total price for the contract line. This is either calculated using the formula Quantity x Unit Price or it is equal to the Sales Price Override if that field contains a value.</description>
        <formula>BLANKVALUE(ffbc__SalesPriceOverride__c, ffbc__Quantity__c * ffbc__UnitPrice__c)</formula>
        <inlineHelpText>Total price for the contract line. This is either calculated using the formula Quantity x Unit Price or it is equal to the Sales Price Override if that field contains a value.</inlineHelpText>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__StartDate__c</fullName>
        <description>Date from which billing can commence for this contract line item.</description>
        <inlineHelpText>Date from which billing can commence for this contract line item.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffbc__TotalBilled__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount billed for the contract line item.</description>
        <inlineHelpText>Total amount that has been billed for the contract line item.</inlineHelpText>
        <label>Total Billed</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__TotalContractLineValue__c</fullName>
        <description>Total value of the contract line item over its lifetime. The value is zero if the billing type is Recurring Variable or the Billing Type is Recurring Fixed and there is no end date. If the billing type is Recurring Fixed and there is an end date, the value is calculated using the formula: Sales Price x Number of Terms (including partial terms). If the billing type is One-off, the value is the sales price.</description>
        <inlineHelpText>Total value of the contract line item over its lifetime.</inlineHelpText>
        <label>Total Contract Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__TriggerId__c</fullName>
        <description>An identifier that is used by Billing Central services when creating contract line items.</description>
        <label>Trigger ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__UnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the unit of measure used to determine customer usage on this contract line item.</description>
        <label>Unit Of Measure</label>
        <referenceTo>ffbc__UnitOfMeasure__c</referenceTo>
        <relationshipLabel>Related Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__UnitPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Price of one item. This is used to calculate the Sales Price.</description>
        <inlineHelpText>Price of one item. This is used to calculate the Sales Price.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__General_Ledger_Account_Id__c</fullName>
        <label>General Ledger Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__IsConcession__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this line will create a negative line in FF Billing documents. For rent concessions only</inlineHelpText>
        <label>Is Concession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Related_ID__c</fullName>
        <inlineHelpText>Used for contract lines that are automatically created by the system.</inlineHelpText>
        <label>Related ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Contract Line Item</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ffbc__All</fullName>
        <columns>NAME</columns>
        <columns>ffbc__ProductService__c</columns>
        <columns>ffbc__Contract__c</columns>
        <columns>ffbc__Quantity__c</columns>
        <columns>ffbc__UnitPrice__c</columns>
        <columns>ffbc__SalesPrice__c</columns>
        <columns>ffbc__TotalBilled__c</columns>
        <columns>ffbc__BillingTerm__c</columns>
        <columns>ffbc__BillingType__c</columns>
        <columns>ffbc__FirstBillDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTLI{0000000000}</displayFormat>
        <label>Contract Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>